Closed Bug 1041311 Opened 12 years ago Closed 12 years ago

Fix Qt compilation (Make destructors of NS_*_INLINE_* refcounted classes non-public)

Categories

(Core Graveyard :: Widget: Qt, defect)

All
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla33

People

(Reporter: evilpies, Assigned: evilpies)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch v1 (obsolete) — Splinter Review
No description provided.
Attachment #8459305 - Flags: review?(romaxa)
Comment on attachment 8459305 [details] [diff] [review] v1 ># HG changeset patch ># Parent 4515815020907e84660259ea993287bd84058855 Plz add bug number and description to the patch header (hg qrefresh -U -m "....") > >+NS_IMETHODIMP >+nsScreenManagerQt::ScreenForId(uint32_t aId, nsIScreen **aOutScreen) nsScreenManagerQt::ScreenForId(uint32_t aId, nsIScreen** aOutScreen) ^ >+{ >+ if (!mInitialized) >+ init(); if (!mInitialized) { init(); } > NS_IMETHODIMP >+nsScreenQt::GetId(uint32_t *aId) nsScreenQt::GetId(uint32_t* aId)
Attached patch v2Splinter Review
I never include bug info into my patches and I was just maintaining the local style.
Assignee: nobody → evilpies
Attachment #8459305 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #8459305 - Flags: review?(romaxa)
Attachment #8459332 - Flags: review?(romaxa)
Attachment #8459332 - Flags: review?(romaxa) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Summary: Fix compilation → Fix Qt compilation (Make destructors of NS_*_INLINE_* refcounted classes non-public)
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: