Bug 1041311 - Fix Qt compilation. r=romaxa