widget/qt/nsBidiKeyboard.h
@@ -16,6 +16,8 @@ public:
     NS_DECL_NSIBIDIKEYBOARD
 
     nsBidiKeyboard();
+
+protected:
     virtual ~nsBidiKeyboard();
 };
 
