widget/qt/nsScreenManagerQt.h
@@ -17,13 +17,12 @@ class nsScreenManagerQt : public nsIScreenManager
 {
 public:
   nsScreenManagerQt ( );
-  virtual ~nsScreenManagerQt();
 
   NS_DECL_ISUPPORTS
   NS_DECL_NSISCREENMANAGER
 
 private:
-
+  virtual ~nsScreenManagerQt();
   void init ();
 
   nsCOMPtr<nsIScreen> *screens;
